optimize interface for XCZI datasets import

--- a/dataset inference/Flow_movies_CZI_to_8b_tiff.ipynb
+++ b/dataset inference/Flow_movies_CZI_to_8b_tiff.ipynb
@@ -28,7 +28,12 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.582964Z",
+     "start_time": "2025-01-16T11:02:44.509939Z"
+    }
+   },
    "source": [
     "import sys\n",
     "\n",
@@ -53,8 +58,9 @@
     "import shutil\n",
     "import pickle\n",
     "\n",
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display \n",
+    "#import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "from ipywidgets import Layout, HBox, VBox, Text, Button, Output, HTML\n",
     "\n",
     "from dataclasses import dataclass, asdict\n",
     "import json\n",
@@ -65,15 +71,27 @@
     "from PIL import Image\n",
     "from utils import imgio as iio"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16-Jan-25 12:02:49 - bfio.backends - WARNING  - Java backend is not available. This could be due to a missing dependency (jpype).\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.598003Z",
+     "start_time": "2025-01-16T11:02:49.586976Z"
+    }
    },
    "source": [
     "def save_pckl(d, fname):\n",
@@ -85,14 +103,18 @@
     "    return data"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.702882Z",
+     "start_time": "2025-01-16T11:02:49.689999Z"
+    }
    },
    "source": [
     "def ish(im, vmin=0, vmax=255):\n",
@@ -101,14 +123,18 @@
     "    plt.close()"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.732862Z",
+     "start_time": "2025-01-16T11:02:49.719872Z"
+    }
    },
    "source": [
     "def read_mp_tiff(path):\n",
@@ -127,17 +153,22 @@
     "    return np.array(images)"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.763038Z",
+     "start_time": "2025-01-16T11:02:49.751046Z"
+    }
+   },
    "source": [
     "def minmax(a):\n",
     "    return np.min(a), np.max(a)"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -157,7 +188,11 @@
    "cell_type": "code",
    "metadata": {
     "code_folding": [],
-    "hidden": true
+    "hidden": true,
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.793018Z",
+     "start_time": "2025-01-16T11:02:49.782026Z"
+    }
    },
    "source": [
     "def save_as_8bit_tifs(root_dir, ds_name, ci:CZI_image):\n",
@@ -203,13 +238,17 @@
     "                iio.save_image(im_8b, name)"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "metadata": {
     "code_folding": [],
-    "hidden": true
+    "hidden": true,
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.822999Z",
+     "start_time": "2025-01-16T11:02:49.810007Z"
+    }
    },
    "source": [
     "def dataset_from_czi(root_dir, image_file_name):\n",
@@ -224,7 +263,7 @@
     "    del ci"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -232,7 +271,12 @@
    "source": "## splitting tiles:"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.853013Z",
+     "start_time": "2025-01-16T11:02:49.840106Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def create_ds_dir(idx, ds_name, datasets_path):\n",
@@ -245,10 +289,15 @@
     "        return True"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.883029Z",
+     "start_time": "2025-01-16T11:02:49.871028Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def make_record_info(ds_inf_file_path, idx, ds_name, datasets_path, tile = None):\n",
@@ -261,10 +310,15 @@
     "    assert max(ds_inf.keys()) == idx, f'max({ds_inf.keys()}) ={max(ds_inf.keys())} != {idx}'"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.928317Z",
+     "start_time": "2025-01-16T11:02:49.899965Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def ds_info(ds_path):\n",
@@ -366,10 +420,15 @@
     "    return fn"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:49.973274Z",
+     "start_time": "2025-01-16T11:02:49.945293Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def create_segmentation_datasets(datasets_path, datasets_names, start_ds_idx, ds_inf_file_path, time_subsample_min_t = 210):  # if n_t >time_subsample_min_t - take every second frame\n",
@@ -516,7 +575,7 @@
     "    return start_ds_idx"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -595,14 +654,24 @@
    "source": "# 3. Ipywidgets interface"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:02:55.506428Z",
+     "start_time": "2025-01-16T11:02:55.499432Z"
+    }
+   },
    "cell_type": "code",
    "source": "",
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:05:15.841335Z",
+     "start_time": "2025-01-16T11:05:15.810355Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Ipywidgets interface:\n",
@@ -642,30 +711,6 @@
     "        json.dump(asdict(cfg), f, indent=4)\n",
     "        \n",
     "\n",
-    "import_cfg = load_import_cfg()"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "# 1. Files path input string \"CZI Datasets path\"\n",
-    "raw_ds_path = widgets.Text(value=import_cfg.raw_ds_path, description='CZI Datasets path:', disabled=False)\n",
-    "\n",
-    "# 2. Directory path input string \"Segmentation datasets path\"\n",
-    "seg_ds_path = widgets.Text(value=import_cfg.seg_ds_path, description='Segmentation datasets path:', disabled=False)\n",
-    "\n",
-    "# 3. File path with datasets IDs list - text human readable file with dataset id - names pairs like \" 85 - Untreated_2024.06.18\"\n",
-    "ds_inf_path = widgets.Text(value=import_cfg.ds_inf_path, description='Datasets info path:', disabled=False)\n",
-    "\n",
-    "# 4. Button \"Process\"\n",
-    "process_btn = widgets.Button(description='Process')\n",
-    "\n",
-    "# 5. Output - text box with the progress\n",
-    "out = widgets.Output()\n",
-    "\n",
     "def read_info_file(ds_inf_file_path):\n",
     "    try:\n",
     "        with open(ds_inf_file_path, 'rt') as f:\n",
@@ -693,66 +738,167 @@
     "        for i, title in enumerate(new_ds_list):\n",
     "            f.write(f'{next_idx+i} - {title}\\n')\n",
     "            \n",
-    "def on_process_click(b):\n",
-    "    with out:\n",
-    "        try:\n",
-    "            print('Processing...')\n",
-    "            # save config\n",
-    "            import_cfg.raw_ds_path = raw_ds_path.value\n",
-    "            import_cfg.seg_ds_path = seg_ds_path.value\n",
-    "            import_cfg.ds_inf_path = ds_inf_path.value\n",
-    "            \n",
-    "            save_import_cfg(import_cfg)\n",
-    "            print('Saved cfg')\n",
-    "            \n",
-    "            ds_inf = read_info_file(import_cfg.ds_inf_path)\n",
-    "            \n",
-    "            print('Read info')\n",
-    "            start_ds_idx = (max(ds_inf.keys())+1) if len(ds_inf) else 0\n",
-    "            print(f'start_ds_idx = {start_ds_idx}')\n",
-    "            # process\n",
-    "            all_ds = list(glob.glob(import_cfg.raw_ds_path+ '\\\\**\\\\'+'*.czi', recursive=True))\n",
-    "            for name in all_ds:\n",
-    "                print(name)\n",
-    "            for fname in all_ds:\n",
-    "                dataset_from_czi(import_cfg.raw_ds_path, fname)\n",
-    "            print('Done')\n",
-    "            \n",
-    "            datasets_names = []\n",
-    "            path = import_cfg.raw_ds_path\n",
-    "            path = os.path.abspath(path)\n",
-    "            for p2 in sorted(os.listdir(path)):\n",
-    "                    path3 = os.path.join(path, p2)\n",
-    "                    if not os.path.isdir(path3):\n",
-    "                        continue\n",
-    "                    datasets_names.append([[0, path3, 0]])\n",
-    "                \n",
-    "            print(f'datasets_names = {datasets_names}')\n",
-    "            start_ds_idx = create_segmentation_datasets(import_cfg.seg_ds_path,\n",
-    "                                                        datasets_names,\n",
-    "                                                        start_ds_idx,\n",
-    "                                                        import_cfg.ds_inf_path\n",
-    "                                                        )\n",
-    "        except Exception as e:\n",
-    "            print('Error:', e)\n",
-    "            trace_str = traceback.format_exc()\n",
-    "            print(trace_str, flush=True)\n",
-    "        \n",
-    "        \n",
-    "process_btn.on_click(on_process_click)\n",
-    "\n",
-    "vbox = widgets.VBox([raw_ds_path, seg_ds_path, ds_inf_path, process_btn, out])\n",
-    "display(vbox)"
+    "def save_with_widgets():\n",
+    "    \"\"\"\n",
+    "    Saving widgets state for history hack, reused from \n",
+    "    https://stackoverflow.com/questions/59123005/how-to-save-state-of-ipython-widgets-in-jupyter-notebook-using-python-code\n",
+    "    \"\"\"\n",
+    "    code = '<script>Jupyter.menubar.actions._actions[\"widgets:save-with-widgets\"].handler()</script>'\n",
+    "    display(HTML(code))\n"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:05:17.360338Z",
+     "start_time": "2025-01-16T11:05:17.331356Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def import_gui():\n",
+    "    # 0. Load config\n",
+    "    import_cfg = load_import_cfg()\n",
+    "    \n",
+    "    # 1. Files path input string \"CZI Datasets path\"\n",
+    "    raw_ds_path = Text(value=import_cfg.raw_ds_path, description='CZI Datasets path:', disabled=False, layout=Layout(width='600px'))\n",
+    "    \n",
+    "    # 2. Directory path input string \"Segmentation datasets path\"\n",
+    "    seg_ds_path = Text(value=import_cfg.seg_ds_path, description='Segmentation datasets path:', disabled=False, layout=Layout(width='600px'))\n",
+    "    \n",
+    "    # 3. File path with datasets IDs list - text human readable file with dataset id - names pairs like \" 85 - Untreated_2024.06.18\"\n",
+    "    ds_inf_path = Text(value=import_cfg.ds_inf_path, description='Datasets info path:', disabled=False, layout=Layout(width='600px'))\n",
+    "    \n",
+    "    # 4. Button \"Process\"\n",
+    "    process_btn = Button(description='Process', layout=Layout(width='600px'))\n",
+    "    \n",
+    "    # 5. Output - text box with the progress\n",
+    "    out = Output()\n",
+    "    \n",
+    "\n",
+    "                \n",
+    "    def on_process_click(b):\n",
+    "        with out:\n",
+    "            try:\n",
+    "                print('Processing...')\n",
+    "                # save config\n",
+    "                import_cfg.raw_ds_path = raw_ds_path.value\n",
+    "                import_cfg.seg_ds_path = seg_ds_path.value\n",
+    "                import_cfg.ds_inf_path = ds_inf_path.value\n",
+    "                \n",
+    "                save_import_cfg(import_cfg)\n",
+    "                # print('Saved cfg')\n",
+    "                \n",
+    "                ds_inf = read_info_file(import_cfg.ds_inf_path)\n",
+    "                \n",
+    "                # print('Read info')\n",
+    "                start_ds_idx = (max(ds_inf.keys())+1) if len(ds_inf) else 0\n",
+    "                imported_datasets_range_first = start_ds_idx\n",
+    "                # process\n",
+    "                all_ds = list(glob.glob(import_cfg.raw_ds_path+ '\\\\**\\\\'+'*.czi', recursive=True))\n",
+    "                for name in all_ds:\n",
+    "                    print(name)\n",
+    "                for fname in all_ds:\n",
+    "                    dataset_from_czi(import_cfg.raw_ds_path, fname)\n",
+    "                \n",
+    "                datasets_names = []\n",
+    "                path = import_cfg.raw_ds_path\n",
+    "                path = os.path.abspath(path)\n",
+    "                for p2 in sorted(os.listdir(path)):\n",
+    "                        path3 = os.path.join(path, p2)\n",
+    "                        if not os.path.isdir(path3):\n",
+    "                            continue\n",
+    "                        datasets_names.append([[0, path3, 0]])\n",
+    "                    \n",
+    "                print(f'datasets_names = {datasets_names}')\n",
+    "                start_ds_idx = create_segmentation_datasets(import_cfg.seg_ds_path,\n",
+    "                                                            datasets_names,\n",
+    "                                                            start_ds_idx,\n",
+    "                                                            import_cfg.ds_inf_path\n",
+    "                                                            )\n",
+    "                \n",
+    "                imported_datasets_range_last = start_ds_idx - 1\n",
+    "                print(f'Dataset range: first {imported_datasets_range_first}')\n",
+    "                print(f'Dataset range: last {imported_datasets_range_last}')\n",
+    "                \n",
+    "                print('Done')\n",
+    "                save_with_widgets()\n",
+    "                \n",
+    "            except Exception as e:\n",
+    "                print('Error:', e)\n",
+    "                trace_str = traceback.format_exc()\n",
+    "                print(trace_str, flush=True)\n",
+    "            \n",
+    "            \n",
+    "    process_btn.on_click(on_process_click)\n",
+    "    \n",
+    "    controls_b = VBox([\n",
+    "        raw_ds_path,\n",
+    "        seg_ds_path,\n",
+    "        ds_inf_path,\n",
+    "        process_btn,\n",
+    "        out\n",
+    "    ])\n",
+    "    \n",
+    "    display(HTML('''\n",
+    "    <style>\n",
+    "        .widget-label { min-width: 200px !important; }\n",
+    "    </style>'''))\n",
+    "    \n",
+    "    display(controls_b)"
+   ],
+   "outputs": [],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T11:05:18.655487Z",
+     "start_time": "2025-01-16T11:05:18.606522Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import_gui()",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HTML(value='\\n    <style>\\n        .widget-label { min-width: 200px !important; }\\n    </style>')"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2b7c09e3e5be4a1e881af015251d8593"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "VBox(children=(Text(value='g:\\\\IVFCA\\\\Dixy\\\\run3\\\\raw_data_t', description='CZI Datasets path:', layout=Layout…"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "88fcbeedcf0241e1a3028dc2b3b84fd6"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 20
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
